load shoes + WIP change colors according to shoe selected

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </section>
     <section class="products">
       <ul class="products-list">
-        <li class="products-list-item">
+        <li class="products-list-item" data-index="1">
           <img src="/shoe_1.png" alt="" class="products-list-item-img" />
 
           <div class="shadow-wrapper">
@@ -55,7 +55,7 @@
             <span class="products-list-item-informations-color">3 colors</span>
           </div>
         </li>
-        <li class="products-list-item">
+        <li class="products-list-item" data-index="2">
           <img src="/shoe_2.png" alt="" class="products-list-item-img" />
 
           <div class="shadow-wrapper">
@@ -69,7 +69,7 @@
             <span class="products-list-item-informations-color">3 colors</span>
           </div>
         </li>
-        <li class="products-list-item">
+        <li class="products-list-item" data-index="3">
           <img src="/shoe_3.png" alt="" class="products-list-item-img" />
 
           <div class="shadow-wrapper">
@@ -83,7 +83,7 @@
             <span class="products-list-item-informations-color">3 colors</span>
           </div>
         </li>
-        <li class="products-list-item">
+        <li class="products-list-item" data-index="4">
           <img src="/shoe_4.png" alt="" class="products-list-item-img" />
 
           <div class="shadow-wrapper">
@@ -97,7 +97,21 @@
             <span class="products-list-item-informations-color">3 colors</span>
           </div>
         </li>
-        <li class="products-list-item">
+        <li class="products-list-item" data-index="5">
+          <img src="/shoe_5.png" alt="" class="products-list-item-img" />
+
+          <div class="shadow-wrapper">
+            <img src="/shoe_shadow.png" alt="" class="shadow-wrapper-img" />
+          </div>
+
+          <div class="products-list-item-informations">
+            <h2>Nike Air Force</h2>
+            <span>★ ★ ★ ☆ ☆</span>
+            <span>$185</span>
+            <span class="products-list-item-informations-color">3 colors</span>
+          </div>
+        </li>
+        <li class="products-list-item" data-index="6">
           <img src="/shoe_5.png" alt="" class="products-list-item-img" />
 
           <div class="shadow-wrapper">
