load shoe onClick item

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
     <!-- <link rel="stylesheet" href="/src/styles/style.scss" /> -->
   </head>
-  <body>
+  <body data-shoe="6">
     <header class="header">
       <img src="/nike-logo.png" alt="" class="header-logo" />
       <nav class="header-nav">
@@ -112,14 +112,14 @@
           </div>
         </li>
         <li class="products-list-item" data-index="6">
-          <img src="/shoe_5.png" alt="" class="products-list-item-img" />
+          <img src="/shoe_6.png" alt="" class="products-list-item-img" />
 
           <div class="shadow-wrapper">
             <img src="/shoe_shadow.png" alt="" class="shadow-wrapper-img" />
           </div>
 
           <div class="products-list-item-informations">
-            <h2>Nike Air Force</h2>
+            <h2>Nike TC 7900 Sail</h2>
             <span>★ ★ ★ ☆ ☆</span>
             <span>$185</span>
             <span class="products-list-item-informations-color">3 colors</span>
