--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li class="header-nav-item">Favorites</li>
       </nav>
       <div class="header-actions">
-        <button class="header-actions-btn header-actions-btn--orange"><img src="/icon-search.png" alt="" /></button>
+        <button class="header-actions-btn"><img src="/icon-search.png" alt="" /></button>
         <button class="header-actions-btn"><img src="/icon-cart.png" alt="" /></button>
       </div>
     </header>
