change colors according to shoe selected + prevent loading multiple shoes

--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
         <li class="header-nav-item">Favorites</li>
       </nav>
       <div class="header-actions">
-        <button class="header-actions-btn"><img src="/icon-search.png" alt="" /></button>
-        <button class="header-actions-btn"><img src="/icon-cart.png" alt="" /></button>
+        <button class="header-actions-btn header-actions-btn--search">
+          <img src="/icon-search.png" alt="" />
+        </button>
+        <button class="header-actions-btn header-actions-btn--cart">
+          <img src="/icon-cart.png" alt="" />
+        </button>
       </div>
     </header>
     <section class="canvas-container">
@@ -40,6 +44,9 @@
       <canvas id="webgl"></canvas>
     </section>
     <section class="products">
+      <button class="products-arrow left">
+        <img src="/icon-arrow-right.png" alt="" />
+      </button>
       <ul class="products-list">
         <li class="products-list-item" data-index="1">
           <img src="/shoe_1.png" alt="" class="products-list-item-img" />
@@ -126,6 +133,9 @@
           </div>
         </li>
       </ul>
+      <button class="products-arrow right">
+        <img src="/icon-arrow-right.png" alt="" />
+      </button>
     </section>
     <script type="module" src="/src/main.js"></script>
   </body>
