change colors according to shoe selected

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
           </div>
 
           <div class="products-list-item-informations">
-            <h2>Nike Air Force</h2>
-            <span>★ ★ ★ ☆ ☆</span>
-            <span>$185</span>
-            <span class="products-list-item-informations-color">3 colors</span>
+            <h2>Nike Journey Run</h2>
+            <span>★ ★ ★ ★ ★</span>
+            <span>$120</span>
+            <span class="products-list-item-informations-color">5 colors</span>
           </div>
         </li>
         <li class="products-list-item" data-index="2">
@@ -70,10 +70,10 @@
           </div>
 
           <div class="products-list-item-informations">
-            <h2>Nike Air Force</h2>
-            <span>★ ★ ★ ☆ ☆</span>
-            <span>$185</span>
-            <span class="products-list-item-informations-color">3 colors</span>
+            <h2>Nike Air Max 90</h2>
+            <span>★ ★ ★ ★ ☆</span>
+            <span>$245</span>
+            <span class="products-list-item-informations-color">2 colors</span>
           </div>
         </li>
         <li class="products-list-item" data-index="3">
@@ -84,9 +84,9 @@
           </div>
 
           <div class="products-list-item-informations">
-            <h2>Nike Air Force</h2>
-            <span>★ ★ ★ ☆ ☆</span>
-            <span>$185</span>
+            <h2>Nike Air Zoom Pegasus 36</h2>
+            <span>★ ★ ★ ★ ☆</span>
+            <span>$180</span>
             <span class="products-list-item-informations-color">3 colors</span>
           </div>
         </li>
@@ -98,10 +98,10 @@
           </div>
 
           <div class="products-list-item-informations">
-            <h2>Nike Air Force</h2>
-            <span>★ ★ ★ ☆ ☆</span>
-            <span>$185</span>
-            <span class="products-list-item-informations-color">3 colors</span>
+            <h2>Nike Air Zoom Citizen</h2>
+            <span>★ ★ ★ ★ ★</span>
+            <span>$150</span>
+            <span class="products-list-item-informations-color">2 colors</span>
           </div>
         </li>
         <li class="products-list-item" data-index="5">
@@ -112,10 +112,10 @@
           </div>
 
           <div class="products-list-item-informations">
-            <h2>Nike Air Force</h2>
+            <h2>Nike Air Jordan</h2>
             <span>★ ★ ★ ☆ ☆</span>
-            <span>$185</span>
-            <span class="products-list-item-informations-color">3 colors</span>
+            <span>$295</span>
+            <span class="products-list-item-informations-color">2 colors</span>
           </div>
         </li>
         <li class="products-list-item" data-index="6">
@@ -127,9 +127,9 @@
 
           <div class="products-list-item-informations">
             <h2>Nike TC 7900 Sail</h2>
-            <span>★ ★ ★ ☆ ☆</span>
-            <span>$185</span>
-            <span class="products-list-item-informations-color">3 colors</span>
+            <span>★ ★ ★ ★ ☆</span>
+            <span>$225</span>
+            <span class="products-list-item-informations-color">6 colors</span>
           </div>
         </li>
       </ul>
