--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
           <p>You'll be amazed to find the best designer shoes.</p>
         </div>
         <div class="hero-product">
-          <span class="hero-product-name">Nike Zoom Air</span>
-          <span class="hero-product-price">$260</span>
+          <div class="hero-product-informations">
+            <span class="hero-product-name">Nike Zoom Air</span>
+            <span class="hero-product-price">$260</span>
+          </div>
           <button class="hero-product-button">Get it now</button>
         </div>
       </div>
