add lottie loader

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       </div>
     </header>
     <section class="canvas-container">
+      <div id="lottie-container" class="loader"></div>
       <span class="hero-background">Nike</span>
       <div class="hero">
         <div class="hero-header">
